--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
-    "dev:dd": "npm run build:dd -- --watch",
+    "dev:dd": "set NODE_ENV=production && taro build --type dd --watch",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
@@ -45,7 +45,7 @@
     "@tarojs/taro": "3.2.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "taro-ui": "^2.3.4"
+    "taro-ui": "^3.0.0-alpha.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
